--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.0.4",
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.0.1",
